--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "immutable": "^3.8.2",
+    "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-apollo": "^2.1.5",
     "react-dom": "^16.4.1",
