--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
+    "react-toastify": "^4.1.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.0",
     "redux-immutable": "^4.0.0",
